--- a/peas/linpeas/index.html
+++ b/peas/linpeas/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL=https://github.com/your-username/your-other-repository">
+    <meta http-equiv="refresh" content="0; URL=https://github.com/peass-ng/PEASS-ng/releases/latest/download/linpeas.sh">
     <title>Redirecting...</title>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://github.com/your-username/your-other-repository">click here</a>.</p>
+    <p>If you are not redirected automatically, <a href="https://github.com/peass-ng/PEASS-ng/releases/latest/download/linpeas.sh">click here</a>.</p>
 </body>
 </html>
